# fastapi_llm_requests

./: .env.template  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: env.py  errors.py  log.py
src/app_api/: dependencies.py  main.py  middlewares.py
src/app_api/models/request_models/: request_info.py
src/app_api/models/response_models/: response_info.py
src/app_api/routes/: llm_router.py  parser_router.py  prompt_router.py
src/common/: moment.py  test_typing.py
src/const/: permissions.py
src/db_main/cruds/: channel_crud.py  post_crud.py
src/db_main/models/: channel.py
src/dto/: llm_info.py  redis_models.py
src/service_llm/: deepseek.py  llm_manager.py
